[master]: Add logging and filters

--- a/CustomActionFilters/CustomActionFilters.csproj
+++ b/CustomActionFilters/CustomActionFilters.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -142,17 +145,18 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuthorizeAttributeController.cs" />
-    <Compile Include="Controllers\CustomFiltersController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\HandleErrorAttributeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OutputCacheAttributeController.cs" />
     <Compile Include="Controllers\RequireHttpsAttributeController.cs" />
     <Compile Include="Controllers\ValidateInputAttributeController.cs" />
-    <Compile Include="Filters\CustomFilterController.cs" />
+    <Compile Include="Filters\CustomFilter.cs" />
+    <Compile Include="Filters\CustomFilter2.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ContactViewModel.cs" />
     <Compile Include="Models\MyFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -198,7 +202,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\AuthorizeAttribute\" />
-    <Folder Include="Views\CustomFilters\" />
     <Folder Include="Views\Errors\" />
     <Folder Include="Views\HandleErrorAttribute\" />
     <Folder Include="Views\OutputCache\" />
