--- a/CustomActionFilters/Web.config
+++ b/CustomActionFilters/Web.config
@@ -4,6 +4,26 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+    <configSections>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    </configSections>
+    <log4net>
+        <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+            <file value="C:\\working\\logs\\CustomActionFilters.txt" />
+            <appendToFile value="true" />
+            <rollingStyle value="Size" />
+            <maxSizeRollBackups value="10" />
+            <maximumFileSize value="10MB" />
+            <staticLogFileName value="true" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+            </layout>
+        </appender>
+        <root>
+            <level value="Debug" />
+            <appender-ref ref="RollingLogFileAppender" />
+        </root>
+    </log4net>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
@@ -12,7 +32,7 @@
     </appSettings>
     <system.web>
         <customErrors mode="On">
-            <error statusCode="404" redirect="~/Errors/PageNotFound"/>
+            <error statusCode="404" redirect="~/Errors/PageNotFound" />
         </customErrors>
         <compilation debug="true" targetFramework="4.5.2" />
         <httpRuntime targetFramework="4.5.2" />
